@@ -41,6 +41,7 @@ public class RecordingData
 	private static final byte FLAGS1_NULL_TERMINATED_STRINGS =   0b00000010;
 	private static final byte FLAGS1_HAS_ID_MAPS =               0b00000100;
 	private static final byte FLAGS1_START_DIMENSION_SPECIFIED = 0b00001000;
+	private static final byte FLAGS1_PLAYER_NAME_SPECIFIED =     0b00010000;
 
 	public long fileSize = 0;
 	public byte version = 0;
@@ -49,10 +50,10 @@ public class RecordingData
 	public final float[] startRot = new float[2];
 	public boolean endsWithDeath = false; // deprecated
 	private boolean usesIdMaps = true;
-	public boolean startDimensionSpecified = false; //TODO: use it
 	public final ItemIdMap itemIdMap = new ItemIdMap(this);
 	public final BlockStateIdMap blockStateIdMap = new BlockStateIdMap(this);
 	public @Nullable String startDimension = null; //TODO: use it
+	public @Nullable String playerName = null;
 	public final List<Action> actions = new ArrayList<>();
 	public final List<BlockAction> blockActions = new ArrayList<>();
 	public long tickCount = 0;
@@ -117,7 +118,6 @@ public class RecordingData
 	private void saveHeader(RecordingFiles.Writer writer)
 	{
 		boolean hasIdMaps = usesIdMaps && (itemIdMap.size() != 0 || blockStateIdMap.size() != 0);
-		boolean hasStartDimension = startDimensionSpecified && (startDimension != null);
 
 		writer.addVec3(startPos);
 		writer.addFloat(startRot[0]);
@@ -127,7 +127,8 @@ public class RecordingData
 		flags1 |= endsWithDeath ? FLAGS1_ENDS_WITH_DEATH : 0;
 		flags1 |= FLAGS1_NULL_TERMINATED_STRINGS;
 		flags1 |= hasIdMaps ? FLAGS1_HAS_ID_MAPS : 0;
-		flags1 |= hasStartDimension ? FLAGS1_START_DIMENSION_SPECIFIED : 0;
+		flags1 |= startDimension != null ? FLAGS1_START_DIMENSION_SPECIFIED : 0;
+		flags1 |= playerName != null ? FLAGS1_PLAYER_NAME_SPECIFIED : 0;
 		writer.addByte(flags1);
 
 		if (hasIdMaps)
@@ -136,7 +137,8 @@ public class RecordingData
 			blockStateIdMap.save(writer);
 		}
 
-		if (hasStartDimension) { writer.addString(startDimension); }
+		if (startDimension != null) { writer.addString(startDimension); }
+		if (playerName != null) { writer.addString(playerName); }
 	}
 
 	private void loadHeader(RecordingFiles.FileReader reader, boolean legacyHeader)
@@ -150,7 +152,8 @@ public class RecordingData
 		endsWithDeath = (flags1 & FLAGS1_ENDS_WITH_DEATH) != 0;
 		reader.setStringMode((flags1 & FLAGS1_NULL_TERMINATED_STRINGS) == 0);
 		usesIdMaps = (flags1 & FLAGS1_HAS_ID_MAPS) != 0;
-		startDimensionSpecified = (flags1 & FLAGS1_START_DIMENSION_SPECIFIED) != 0;
+		boolean startDimensionSpecified = (flags1 & FLAGS1_START_DIMENSION_SPECIFIED) != 0;
+		boolean playerNameSpecified = (flags1 & FLAGS1_PLAYER_NAME_SPECIFIED) != 0;
 
 		if (usesIdMaps)
 		{
@@ -159,6 +162,7 @@ public class RecordingData
 		}
 
 		if (startDimensionSpecified) { startDimension = reader.readString(); }
+		if (playerNameSpecified) { playerName = reader.readString(); }
 	}
 
 	public Vec3 initEntityPosition(Entity entity, Vec3 posOffset)
