@@ -38,11 +38,8 @@ public class RecordingContext
 
 		this.positionTracker.writeToRecordingData(data);
 
-		if (Settings.ASSIGN_DIMENSIONS.val)
-		{
-			data.startDimensionSpecified = true;
-			data.startDimension = recordedPlayer.level().dimension().location().toString();
-		}
+		if (Settings.ASSIGN_DIMENSIONS.val) { data.startDimension = recordedPlayer.level().dimension().location().toString(); }
+		if (Settings.ASSIGN_PLAYER_NAME.val) { data.playerName = recordedPlayer.getName().getString(); }
 	}
 
 	public void start(boolean sendMessage)
